--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:responsive": "echo '📱 Testing responsive design - Use browser dev tools to test different screen sizes'",
+    "analyze": "npx vite-bundle-analyzer dist"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
@@ -19,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
